[tool.poetry]
name = "pressure in the formation-fracture system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mpmath = "^1.3.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
numpy = "^1.26.4"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
